Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15263

panic: null pointer in qmt_pool_free->lu_context_key_get

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      [10223.785547] BUG: unable to handle kernel NULL pointer dereference at 00000000000000a0
      [10223.786406] IP: [<ffffffffc08de2d7>] lu_context_key_get+0x17/0x30 [obdclass]
      [10223.787039] PGD 80000000da4c5067 PUD da096067 PMD 0 
      [10223.787653] Oops: 0000 [#1] SMP 
      [10223.788178] Modules linked in: dm_flakey lustre(OE) ofd(OE) osp(OE) lod(OE) ost(OE) mdt(OE) mdd(OE) mgs(OE) osd_ldiskfs(OE) ldiskfs(OE) lquota(OE) lfsck(OE) obdecho(OE) mgc(OE) mdc(OE) lov(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ptlrpc(OE) obdclass(OE) ksocklnd(OE) lnet(OE) libcfs(OE) loop vboxsf(OE) iosf_mbi kvm_intel kvm irqbypass crc32_pclmul ghash_clmulni_intel ppdev aesni_intel lrw gf128mul glue_helper ablk_helper vboxguest(OE) cryptd sg joydev parport_pc pcspkr parport video i2c_piix4 ip_tables ext4 mbcache jbd2 sr_mod sd_mod cdrom crc_t10dif crct10dif_generic ata_generic pata_acpi ahci ata_piix libahci libata crct10dif_pclmul crct10dif_common crc32c_intel e1000 serio_raw dm_mirror dm_region_hash dm_log dm_mod [last unloaded: dm_flakey]
      [10223.797150] CPU: 1 PID: 5701 Comm: qsd_reint_qpool Kdump: loaded Tainted: G           OE  ------------   3.10.0-957.1.3957.1.3.x4.1.15.x86_64 #1
      [10223.799050] Hardware name: innotek GmbH VirtualBox/VirtualBox, BIOS VirtualBox 12/01/2006
      [10223.821802] task: ffff90371a6a5140 ti: ffff9036fd1bc000 task.ti: ffff9036fd1bc000
      [10223.823067] RIP: 0010:[<ffffffffc08de2d7>]  [<ffffffffc08de2d7>] lu_context_key_get+0x17/0x30 [obdclass]
      [10223.824639] RSP: 0018:ffff9036fd1bfc90  EFLAGS: 00010246
      [10223.825612] RAX: 0000000000000014 RBX: ffff90370b678518 RCX: ffffffff8c758660
      [10223.826150] RDX: 0000000000000000 RSI: ffffffffc116a220 RDI: ffff9036fd1bfe40
      [10223.827184] RBP: ffff9036fd1bfcc8 R08: 0000000000000000 R09: 370b6785b80c0000
      [10223.827711] R10: ffff90375fd24760 R11: ffffe53380d7a2c0 R12: ffff9036ed8d9800
      [10223.828515] R13: ffff9036fd1bfe40 R14: ffff9036f55ece00 R15: 0000000000000000
      [10223.829155] FS:  0000000000000000(0000) GS:ffff90375fd00000(0000) knlGS:0000000000000000
      [10223.832512] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [10223.832994] CR2: 00000000000000a0 CR3: 00000000da5ba000 CR4: 00000000000606e0
      [10223.833152] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
      [10223.833787] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
      [10223.834154] Call Trace:
      [10223.835150]  [<ffffffffc08de358>] lu_object_free.isra.30+0x68/0x170 [obdclass]
      [10223.837630]  [<ffffffffc08e1a35>] lu_object_put+0xc5/0x3e0 [obdclass]
      [10223.838517]  [<ffffffffc100e56c>] qmt_pool_free+0x30c/0x590 [lquota]
      [10223.838751]  [<ffffffffc10100b5>] qmt_pool_recalc+0x365/0x1260 [lquota]
      [10223.841118]  [<ffffffff8bac1c31>] kthread+0xd1/0xe0
      [10223.844610]  [<ffffffff8c176c37>] ret_from_fork_nospec_begin+0x21/0x21
      [10223.848850] Code: c0 1f e6 ff 48 c7 c7 c0 4c 94 c0 e8 a4 95 e5 ff 0f 1f 40 00 0f 1f 44 00 00 48 63 46 20 48 3b 34 c5 60 db a0 c0 75 09 48 8b 57 10 <48> 8b 04 c2 c3 55 48 89 e5 e8 93 25 03 00 90 66 2e 0f 1f 84 00 
      [10223.871167] RIP  [<ffffffffc08de2d7>] lu_context_key_get+0x17/0x30 [obdclass]
      [10223.871791]  RSP <ffff9036fd1bfc90>
      [10223.872149] CR2: 00000000000000a0 
      

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: